WIP - Get working for trashapp